--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -5,33 +5,35 @@
   box-sizing:border-box;
 }
 :root{
-  --dark-grey: rgba(0, 0, 0, 0.2 );
+  --dark-grey:rgba(0, 0, 0, 0.2 );
 }
 body{
   font-family:Arial, Helvetica, sans-serif;
   background-color:var(--dark-grey);
   font-size: clamp(1rem, 2.2vh, 1.5rem);
 }
-.checkout-app{
-  margin-inline:20px;
+#wrapper{
+  margin-top:80px ;
 }
-
+.container{
+  padding:10px 5%;
+}
 .cart-summary{
   background-color:rgb(240, 240, 240) ;
   color:green;
-  margin: 80px 20px 20px 0;
+  margin-top: 80px 0 10px;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2 ),
   0px 2px 2px 0px rgba(0, 0, 0, 0.2 );
   padding:12px;
-  display:flex;
   border-radius:5px;
+  font-size:30px;
+  margin:20px auto;
 }
-
  .main-checkout-grid{
   display:grid;
   grid-template-columns: repeat(1fr, 400px);
   padding-bottom:20px;
-  column-gap: 15px;
+  grid-gap:15px;
 } 
 @media(min-width:768px){
   .main-checkout-grid{
@@ -39,33 +41,22 @@ body{
   }
 }
 
-@media(max-width:769px){ 
+@media(max-width:800px){ 
   .main-checkout-grid{
     grid-template-columns:1fr;
-  }
-   .order-summary-wrapper{
-    margin-right:20px;
   } 
   .checkout-app{
     margin-right:5px;
   }
-
-}
-
-@media(max-width:450px){ 
-  .main-checkout-grid{
-    grid-template-columns:1fr;
-    
+  .product-container-grid{
+    font-size:20px;
   }
-  .order-summary-wrapper{
-    margin-right:20px;
-  } 
-  .footer{
-    margin-right:-50px;
+  .cart-summary{
+    display:block;
   }
-}
-.order-summary-wrapper{
-  margin-right:20px;
+  .items-container{
+    font-size:60px;
+  }
 }
 .items-container{
   display:grid;
@@ -73,24 +64,42 @@ body{
   border-radius:5px;
   background-color:rgb(240, 240, 240) ;
   margin-bottom: 15px;
-  margin-right:20px;
   padding:12px 12px 0px 12px;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2 ),
   0px 2px 2px 0px rgba(0, 0, 0, 0.2 );
+  font-size:18px;
 }    
 .product-container-grid{
-  display:grid;
-  grid-template-columns:180px 200px;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:space-between;
 } 
 .product-image-container{
-  width:150px;
-  height:auto;
+  flex-basis:50%;
+ margin-bottom:25px;
+ padding:10px;
 } 
-
+.product-description-container{
+  flex-basis:45%;
+  padding:10px 0;
+  line-height:30px;
+  font-size:20px;
+}
+@media (max-width:768px){
+  .product-description-container,
+  .product-image-container{
+    flex-basis:100%;
+    margin:0 auto;
+    text-align:center;
+    font-size:20px;
+  }
+}
 .product-image{
   width:100%;
-  height:auto;
-  object-fit:contain;
+  height: auto;
+  display:block;
+  object-fit:cover;
+  border-radius:5px;;
 }
 
 .quantity-price{
@@ -99,30 +108,22 @@ body{
   position:relative;
   font-weight: 700;
 }
-
 .product-oldprice{
   text-decoration: line-through;
    margin-top:-25px 
 }
-
-.product-description-container{
-  display:flex;
-  flex-direction:column;
-  gap:10px;
-
-}
-
 .shop-chant{
   color:palevioletred;
   font-style:oblique;
   font-weight:600;
 }
-
 .update-container{
   margin-left:30px;
   margin-bottom:20px;
-
 }  
+.update-container a{
+  text-decoration: none;
+}
 .remove-button{
   background-color:rgb(236,137,7);
   color:white;
@@ -130,66 +131,76 @@ body{
   padding-inline:12px;
   padding-block:8px;
   border:none;
+  display:block;
+  margin:0 auto;
+  font-size:19px;
   border-radius:5px;
   box-shadow:0px 5px 0px 0px green,
    0px 4px 0px 0px rgb(165, 97, 9);
+   transition: all 0.5s ease-in-out;
 } 
-.remove-button:active{
-  transform:scale(90%);
-  transition:0.5s;
+.remove-button:hover{
+  background-color:green;
  
 }
 .order-summary-wrapper{
   border-radius:5px;
   background-color: rgb(240,240,240);
-  padding-inline:15px;
   padding-block:10px;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2 ),
   0px 2px 2px 0px rgba(0, 0, 0, 0.2 );
   display:grid;
-  grid-template-columns:1fr
+  grid-template-columns:1fr;
+  font-size:25px;
 }
-
 .order-summary-heading{
   color:rgb(236,137,7);
   margin-bottom: 10px;
+  text-align:center;
 }
 .order-summary,.total-amount-container{
   display:grid;
   grid-template-columns: 1fr auto;
   margin-bottom: 15px;
-  margin-left: 20px;
+  padding-inline:20px;
+  font-size:18px;
 } 
 #total-bill{
   color:red;
   font-weight:700;
+  font-size:20px;
 }
  .total-price-container{
   text-align:center;
  }
- .order-button,.a-back-to-home >button{
+ .total-price-container a{
   background-color:rgb(236,137,7);
   color:white;
   font-size: 18px;
   font-weight:700;
   border:none;
-  margin-top:8px;
+  margin:20px 0;
   padding-block:8px;
   padding-inline:15px;
   border-top-left-radius: 15px;
   border-bottom-right-radius: 15px;
+  text-decoration: none;
+  transition: all 0.5s ease-in-out;
+ }
+ .total-price-container a:hover{
+background:green;
  }
 /* Style rules for footer*/
 .footer{
   background-color:#000; 
   color:white; 
   text-align:center;
-  padding:10px 20px 50px 20px;
+  padding:10px 20px 30px 20px;
   line-height:30px;
   padding-top: 10px;
   padding-inline: 20px;
+  font-size:18px;
 }
-
 .foot-links a{
   text-decoration: none;
   color:white;
@@ -203,7 +214,6 @@ body{
   gap:30px;
   margin-bottom: 10px ; 
 }
-
 span{
   color:red;
   font-size:20px ;
