--- a/styles/u-shop-header.css
+++ b/styles/u-shop-header.css
@@ -8,15 +8,21 @@
 body{
   font-family:Arial, Helvetica, sans-serif;
 }
+header{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  z-index: 99;
+  height:200px;
+}
+
   .u-shop-header{
-  height:80px;
+  height:90px;
   padding-inline:30px;  
   align-items: center;
-  position:fixed;
-  z-index:100;
-  top:0;
-  right:0;
-  left:0;
+  position:absolute;
+  width:100%;
   display:flex;
   flex-flow:row;
   column-gap: 10px;
@@ -24,6 +30,7 @@ body{
   background-color: rgb(19, 25, 33);
    color:white; 
 } 
+
  .header-left{
   display:flex;
   width:120px;
@@ -37,7 +44,10 @@ body{
 text-decoration: none;
 cursor: pointer;
 } 
-
+.u-shop-header i{
+  width:50px;
+  display:none;
+}
  .u-shop-logo{
   left:-10px;
   top:-24px;
@@ -138,11 +148,15 @@ cursor: pointer;
   background-color:rgb(236, 137, 7);
   border-radius:50%;
   font-weight: 700;
-  font-size:18px;
+  font-size:19px;
   width:30px;
   text-align: center;
 }  
-
+@media (max-width:768px){
+  .cart-quantity{
+    font-size:21px;
+  }
+}
  .user-icon{
   position:relative;
   right:65px;
