--- a/styles/u-shop.css
+++ b/styles/u-shop.css
@@ -5,7 +5,7 @@
 }
 
 body{
-  background-color:rgb(25,25,25);
+  background-color:#000;
   font-size:clamp(1rem, 2.2vh, 1.5rem);
 }
 
@@ -62,7 +62,7 @@ body{
 
 .marquee{
   color:red;
-  font-size:22px;
+  font-size:27px;
   font-weight: 600;
   text-shadow:0px 4px 4px purple;
 }
@@ -71,45 +71,53 @@ body{
 /*media query for responsiveness*/
 .product-grid{ 
   display:grid;
-  margin-top:30px;
-  grid-gap:10px; 
+  /* margin-top:30px; */
+  grid-gap:30px; 
   grid-template-columns:repeat(auto-fit, minmax(200px, 1fr));
 }
 
 /*General style rules for product container*/
 .product-container{
   display:flex;
-  line-height: 25px;
+  line-height: 30px;
   flex-direction: column; 
-  padding-block:10px;
+  padding-block:20px;
   padding-inline:25px;
   justify-content: center;
   align-items: center;
-  box-shadow:0px 4px 8px 0px rgb(199, 180, 180)
-   ,0 4px 4px 0 rgb(237, 222, 222);
   border-radius:12px;
   z-index: 70;
+  margin-top:20px;
+  background: rgb(25, 25, 27);
+  transition:transform 0.5s ease-in-out;
+  font-size:20px;
+}
+.product-container:hover{
+transform:scale(1.1);
+}
+@media (max-width:768px) {
+  .product-containe{
+    font-size:19px;
+  } 
 }
 
 .image-container{
   padding-top:5px;
-  display:flex;
-  max-width:160px;
-  flex-direction:column;
-  justify-content: center;
+  width:100%;
+  display:block;
+  overflow:hidden;
   align-items: center;
-  height: 160px;
+  margin-bottom:10px;
 }
 
 .product-image{
-  max-width:100%;
-  max-height: 100%;
+  width:100%;
+  height: 100%;
   object-fit: cover;
-}
+  border-radius:10px;
+  display:block;
+  overflow:hidden;
 
-.product-image:hover{
-  transform: scaleY(90%);
-  transition:0.5s
 }
 
 .product-name{
@@ -175,7 +183,6 @@ margin-bottom: 2px;
   border:none;
   box-shadow:0px 4px 0px 0px rgb(236,137,7);
 }
-
 .decrease-btn:active{
   background-color: red;
   transform: scaleY(90%);
@@ -200,7 +207,6 @@ margin-bottom: 2px;
   font-style:oblique;
 }
 
-
 .add-to-cart-btn{
   background-color:rgb(236, 137, 7);
   padding-inline:20px;
@@ -212,10 +218,12 @@ margin-bottom: 2px;
   border:none;
   font-size:18px;
   font-weight:500;
+  transition:background-color 0.5s
 }
 
-.add-to-cart-btn:active{
-  background-color:green;
+.add-to-cart-btn:hover{
+  background-color:yellow;
+  color:black;
 }
 
 /* Style rules for preloader*/
@@ -239,7 +247,6 @@ em{
 }
 
 #spinner{
-  
   width:70px;
   height:70px;
   position:absolute;
@@ -263,7 +270,7 @@ em{
 
 /* Style rules for footer*/
 .footer{
-  background-color:#000; 
+  background-color:rgb(25,25,25); 
   color:white; 
   text-align:center;
   padding-inline:20px;
