--- a/styles/u-shop.css
+++ b/styles/u-shop.css
@@ -92,9 +92,9 @@ body{
   transition:transform 0.5s ease-in-out;
   font-size:20px;
 }
-.product-container:hover{
+/* .product-container:hover{
 transform:scale(1.07);
-}
+} */
 @media (max-width:768px) {
   .product-containe{
     font-size:19px;
