--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -34,6 +34,9 @@ body{
   grid-template-columns: repeat(1fr, 400px);
   padding-bottom:20px;
   grid-gap:15px;
+}
+.fa-brands{
+  margin:10px;
 } 
 @media(min-width:768px){
   .main-checkout-grid{
