--- a/styles/checkout-header.css
+++ b/styles/checkout-header.css
@@ -1,60 +1,61 @@
-
-.header{
-  position:fixed;
-  display:flex;
+.header {
+  position: fixed;
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  left:0;
-  right:0;
-  background-color:rgba(19 25 33);
-  padding:10px;
-  top:0;
-  z-index: 100;
+  left: 0;
+  right: 0;
+  background-color: white;
+  padding: 7px;
+  top: 0;
+  z-index: 999;
+  box-shadow: 0 1px 2px rgb(186, 177, 177);
 }
 
-.header-left{
-margin-left:1.5rem;
+.header-left {
+  margin-left: 1.5rem;
 }
 
-@media(max-width:768px){
-  .cart-quantity{
-  font-size:25px;;
+@media (max-width: 768px) {
+  .cart-quantity {
+    font-size: 18px;
+    font-size: 500;
   }
-  
 }
-.u-shop-logo{
-  font-size:27px;
-  font-weight:600px;
+.u-shop-logo {
+  font-size: 23px;
+  font-weight: 600px;
   text-decoration: none;
-  max-width:100px;
-  color:rgb(236, 137, 7);
-  text-shadow:0 4px 3px  rgb(165, 97, 9);
-  flex:1;
-} 
-.user-icon{
-  background-color: antiquewhite;
-  border-radius:50%;
-  margin-right:16px;
+  max-width: 100px;
+  color: rgb(236, 137, 7);
+  text-shadow: 0 4px 3px rgb(165, 97, 9);
+  flex: 1;
+}
+.user-icon {
+  background-color: rgb(220, 208, 208);
+  border-radius: 50%;
+  margin-right: 16px;
+  color: white;
   align-items: stretch;
-  margin-top:4px;
-} 
+  margin-top: 4px;
+}
 
- .header-right{
-  position:relative;
-  display:flex;
+.header-right {
+  position: relative;
+  display: flex;
   margin-right: 60px;
   justify-content: center;
-} 
+}
 
- .cart-quantity{
-  color:white;
-  position:absolute;
-  left:70px;
-  top:-4px;
-  background-color:rgb(236 137 7);
-   padding:3px; 
-  border-radius:50%;
-  font-weight:600;
-  font-size:23px;
+.cart-quantity {
+  color: white;
+  position: absolute;
+  left: 70px;
+  top: -4px;
+  background-color: rgb(236 137 7);
+  padding: 3px;
+  border-radius: 50%;
+  font-weight: 600;
+  font-size: 23px;
 }
