--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -1,228 +1,219 @@
-
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-:root{
-  --dark-grey:rgba(0, 0, 0, 0.2 );
+:root {
+  --dark-grey: white;
 }
-body{
-  font-family:Arial, Helvetica, sans-serif;
-  background-color:var(--dark-grey);
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--dark-grey);
   font-size: clamp(1rem, 2.2vh, 1.5rem);
 }
-#wrapper{
-  margin-top:80px ;
+#wrapper {
+  margin-top: 80px;
 }
-.container{
-  padding:10px 5%;
+.container {
+  padding: 10px 5%;
 }
-.cart-summary{
-  background-color:rgb(240, 240, 240) ;
-  color:green;
+
+.cart-summary {
+  background-color: rgb(240, 240, 240);
+  color: green;
   margin-top: 80px 0 10px;
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2 ),
-  0px 2px 2px 0px rgba(0, 0, 0, 0.2 );
-  padding:12px;
-  border-radius:5px;
-  font-size:30px;
-  margin:20px auto;
+  padding: 12px;
+  border-radius: 5px;
+  font-size: 30px;
+  margin: 20px auto;
 }
- .main-checkout-grid{
-  display:grid;
+.main-checkout-grid {
+  display: grid;
   grid-template-columns: repeat(1fr, 400px);
-  padding-bottom:20px;
-  grid-gap:15px;
+  padding-bottom: 20px;
+  grid-gap: 15px;
 }
-.fa-brands{
-  margin:10px;
-} 
-@media(min-width:768px){
-  .main-checkout-grid{
-    grid-template-columns:repeat(2, 1fr);
+.fa-brands {
+  margin: 10px;
+}
+@media (min-width: 768px) {
+  .main-checkout-grid {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media(max-width:800px){ 
-  .main-checkout-grid{
-    grid-template-columns:1fr;
-  } 
-  .checkout-app{
-    margin-right:5px;
+@media (max-width: 800px) {
+  .main-checkout-grid {
+    grid-template-columns: 1fr;
   }
-  .product-container-grid{
-    font-size:20px;
+  .checkout-app {
+    margin-right: 5px;
   }
-  .cart-summary{
-    display:block;
+  .product-container-grid {
+    font-size: 20px;
   }
-  .items-container{
-    font-size:60px;
+  .cart-summary {
+    display: block;
+  }
+  .items-container {
+    font-size: 60px;
   }
 }
-.items-container{
-  display:grid;
-  grid-template-columns:1fr ;
-  border-radius:5px;
-  background-color:rgb(240, 240, 240) ;
+.items-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  border-radius: 5px;
+  background-color: rgb(240, 240, 240);
   margin-bottom: 15px;
-  padding:12px 12px 0px 12px;
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2 ),
-  0px 2px 2px 0px rgba(0, 0, 0, 0.2 );
-  font-size:18px;
-}    
-.product-container-grid{
-  display:flex;
-  flex-wrap:wrap;
-  justify-content:space-between;
-} 
-.product-image-container{
-  flex-basis:50%;
- margin-bottom:25px;
- padding:10px;
-} 
-.product-description-container{
-  flex-basis:45%;
-  padding:10px 0;
-  line-height:30px;
-  font-size:20px;
+  padding: 12px 12px 0px 12px;
+  font-size: 18px;
 }
-@media (max-width:768px){
+.product-container-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.product-image-container {
+  flex-basis: 50%;
+  margin-bottom: 25px;
+  padding: 10px;
+}
+.product-description-container {
+  flex-basis: 45%;
+  padding: 10px 0;
+  line-height: 30px;
+  font-size: 20px;
+}
+@media (max-width: 768px) {
   .product-description-container,
-  .product-image-container{
-    flex-basis:100%;
-    margin:0 auto;
-    text-align:center;
-    font-size:20px;
+  .product-image-container {
+    flex-basis: 100%;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 20px;
   }
 }
-.product-image{
-  width:100%;
+.product-image {
+  width: 100%;
   height: auto;
-  display:block;
-  object-fit:cover;
-  border-radius:5px;;
+  display: block;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
-.quantity-price{
+.quantity-price {
   text-align: right;
   color: green;
-  position:relative;
+  position: relative;
   font-weight: 700;
 }
-.product-oldprice{
+.product-oldprice {
   text-decoration: line-through;
-   margin-top:-25px 
+  margin-top: -25px;
 }
-.shop-chant{
-  color:palevioletred;
-  font-style:oblique;
-  font-weight:600;
+.shop-chant {
+  color: red;
+  font-style: oblique;
+  font-weight: 600;
 }
-.update-container{
-  margin-left:30px;
-  margin-bottom:20px;
-}  
-.update-container a{
+.update-container {
+  margin-left: 30px;
+  margin-bottom: 20px;
+}
+.update-container a {
   text-decoration: none;
 }
-.remove-button{
-  background-color:rgb(236,137,7);
-  color:white;
-  font-weight:600;
-  padding-inline:12px;
-  padding-block:8px;
-  border:none;
-  display:block;
-  margin:0 auto;
-  font-size:19px;
-  border-radius:5px;
-  box-shadow:0px 5px 0px 0px green,
-   0px 4px 0px 0px rgb(165, 97, 9);
-   transition: all 0.5s ease-in-out;
-} 
-.remove-button:hover{
-  background-color:green;
- 
+.remove-button {
+  background-color: rgb(236, 137, 7);
+  color: white;
+  font-weight: 600;
+  padding-inline: 12px;
+  padding-block: 8px;
+  border: none;
+  display: block;
+  margin: 0 auto;
+  font-size: 19px;
+  border-radius: 5px;
+  box-shadow: 0px 5px 0px 0px green, 0px 4px 0px 0px rgb(165, 97, 9);
+  transition: all 0.5s ease-in-out;
 }
-.order-summary-wrapper{
-  border-radius:5px;
-  background-color: rgb(240,240,240);
-  padding-block:10px;
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2 ),
-  0px 2px 2px 0px rgba(0, 0, 0, 0.2 );
-  display:grid;
-  grid-template-columns:1fr;
-  font-size:25px;
+.remove-button:hover {
+  background-color: green;
 }
-.order-summary-heading{
-  color:rgb(236,137,7);
+.order-summary-wrapper {
+  border-radius: 5px;
+  background-color: rgb(240, 240, 240);
+  padding-block: 10px;
+  display: grid;
+  grid-template-columns: 1fr;
+  font-size: 25px;
+}
+.order-summary-heading {
+  color: rgb(236, 137, 7);
   margin-bottom: 10px;
-  text-align:center;
+  text-align: center;
 }
-.order-summary,.total-amount-container{
-  display:grid;
+.order-summary,
+.total-amount-container {
+  display: grid;
   grid-template-columns: 1fr auto;
   margin-bottom: 15px;
-  padding-inline:20px;
-  font-size:18px;
-} 
-#total-bill{
-  color:red;
-  font-weight:700;
-  font-size:20px;
-}
- .total-price-container{
-  text-align:center;
- }
- .total-price-container a{
-  background-color:rgb(236,137,7);
-  color:white;
+  padding-inline: 20px;
   font-size: 18px;
-  font-weight:700;
-  border:none;
-  margin:20px 0;
-  padding-block:8px;
-  padding-inline:15px;
+}
+#total-bill {
+  color: red;
+  font-weight: 700;
+  font-size: 20px;
+}
+.total-price-container {
+  text-align: center;
+}
+.total-price-container a {
+  background-color: rgb(236, 137, 7);
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+  border: none;
+  margin: 20px 0;
+  padding-block: 8px;
+  padding-inline: 15px;
   border-top-left-radius: 15px;
   border-bottom-right-radius: 15px;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
- }
- .total-price-container a:hover{
-background:green;
- }
+}
+.total-price-container a:hover {
+  background: green;
+}
 /* Style rules for footer*/
-.footer{
-  background-color:#000; 
-  color:white; 
-  text-align:center;
-  padding:10px 20px 30px 20px;
-  line-height:30px;
+.footer {
+  background-color: #000;
+  color: white;
+  text-align: center;
+  padding: 10px 20px 30px 20px;
+  line-height: 30px;
   padding-top: 10px;
   padding-inline: 20px;
-  font-size:18px;
+  font-size: 18px;
 }
-.foot-links a{
+.foot-links a {
   text-decoration: none;
-  color:white;
+  color: white;
 }
-.foot-links a:hover{
-  color:rgb(236,137,7);
+.foot-links a:hover {
+  color: rgb(236, 137, 7);
 }
-.footer-grid{
-  display:grid;
-  grid-template-columns:repeat(2,1fr);
-  gap:30px;
-  margin-bottom: 10px ; 
+.footer-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+  margin-bottom: 10px;
 }
-span{
-  color:red;
-  font-size:20px ;
+span {
+  color: red;
+  font-size: 20px;
 }
-.copy-right{
-  margin-bottom:5rem;
+.copy-right {
+  margin-bottom: 5rem;
 }
-
-
