--- a/styles/u-shop.css
+++ b/styles/u-shop.css
@@ -1,300 +1,294 @@
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-body{
-  background-color:#000;
-  font-size:clamp(1rem, 2.2vh, 1.5rem);
+body {
+  background-color: rgb(243, 240, 240);
 }
 
-.main{
-   margin:10px 30px 60px 30px;
+.main {
+  margin: 10px 30px 60px 30px;
 }
 
 /* Style rules for the slide animation */
-.slide-container{
-  display:flex;
-  position: relative;
+.slide-container {
+  width: 90%;
   background-color: black;
-  width: 90vmin;  
-  max-height:200px;
-  transform:translate(-50%);
-  left:50%;
-  right: 50%;
-  overflow:hidden ;
-  border:20px solid black;
-  border-radius:8px;
-  margin-top:84px;
-  gap:30px;
-} 
-
-#slider-image{ 
-  width:100%;
-  height:100%;
-  object-fit:contain;
-  animation:slider 18s infinite
+  overflow: hidden;
+  white-space: nowrap;
+  border-radius: 8px;
+  margin-top: 84px;
 }
 
-@keyframes slider {
+#slider-image {
+  width: 100%;
+
+  display: inline-block;
+  margin-right: px;
+  object-fit: cover;
+  animation: slider 18s infinite linear;
+}
+/* 
+ @keyframes slider {
   0%{
     transform:translateX(0);
   }
-  25%{
-    transform:translateX(0);
+  100%{
+    transform:translateX(-100%)
   }
-  30%{
-    transform:translateX(-100%);
-  }
-  50%{
-    transform:translate(-100%);
-  }
-   75%{
-    transform:translate(-200%);
-  } 
- 85%{
-  transform:translate(-315%);
-  } 
-  100%{transform: translate(1%);
-  } 
-} 
+}
+  */
 
-.marquee{
-  color:red;
-  font-size:27px;
+@keyframes slider {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(0);
+  }
+  30% {
+    transform: translateX(-100%);
+  }
+  45% {
+    transform: translateX(-100%);
+  }
+  60% {
+    transform: translateX(-100%);
+  }
+  75% {
+    transform: translate(-300%);
+  }
+  85% {
+    transform: translate(-300%);
+  }
+  100% {
+    transform: translate(1%);
+  }
+}
+
+.marquee {
+  color: red;
+  font-size: 27px;
   font-weight: 600;
-  text-shadow:0px 4px 4px purple;
+  text-shadow: 0px 4px 4px purple;
 }
 /* style rules for slide animation stops*/
 
 /*media query for responsiveness*/
-.product-grid{ 
-  display:grid;
-  /* margin-top:30px; */
-  grid-gap:30px; 
-  grid-template-columns:repeat(auto-fit, minmax(200px, 1fr));
+.product-grid {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 /*General style rules for product container*/
-.product-container{
-  display:flex;
-  line-height: 30px;
-  flex-direction: column; 
-  padding-block:20px;
-  padding-inline:25px;
+.product-container {
+  display: flex;
+  line-height: 15px;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-radius:12px;
+  border-radius: 10px;
   z-index: 70;
-  margin-top:20px;
-  background: rgb(25, 25, 27);
-  transition:transform 0.5s ease-in-out;
-  font-size:20px;
+  background-color: white;
+  transition: transform 0.5s ease-in-out;
+  margin-bottom: 20px;
 }
-.product-container:hover{
-transform:scale(1.07);
+.product-container:hover {
+  transform: scale(1.07);
 }
-.fa-brands{
-  margin:10px;
+.fa-brands {
+  margin: 5px;
 }
-@media (max-width:768px) {
-  .product-containe{
-    font-size:19px;
-  } 
+@media (max-width: 768px) {
+  .product-container {
+    font-size: 15px;
+  }
+
+  .shop-chant {
+    font-size: 14px;
+  }
 }
 
-.image-container{
-  padding-top:5px;
-  width:100%;
-  display:block;
-  overflow:hidden;
-  align-items: center;
-  margin-bottom:10px;
+.image-container {
+  width: 100%;
+  overflow: hidden;
 }
 
-.product-image{
-  width:100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius:10px;
-  display:block;
-  overflow:hidden;
-
+.product-image {
+  width: 100%;
+  object-fit: contain;
+  display: block;
 }
 
-.product-name{
-margin:6px 0 10px 16px;
-color:antiquewhite;
+.product-name {
+  margin: 6px 0 10px 16px;
+  font-size: 16px;
+  font-weight: 500;
 }
-.price-container{
-display: flex;
-gap: 20px;
-margin-left:-7px;
-margin-bottom:15px;
+.price-container {
+  display: flex;
+  gap: 20px;
+  margin-left: -7px;
+  margin-bottom: 15px;
 }
-.product-price{
-  color:antiquewhite;
+/* .product-price {
+  color:blc;
+} */
+
+.old-price {
+  text-decoration: line-through;
+  color: black;
 }
 
-.old-price{
-  text-decoration:line-through;
-  color:antiquewhite;
+.rating-stars {
+  width: 100px;
+  margin-bottom: 2px;
 }
 
-.rating-stars{
-width:100px;
-margin-bottom: 2px;
-
+.product-rating-container {
+  position: relative;
+  bottom: 11px;
+  left: -21px;
 }
 
-.product-rating-container{
-  position:relative;
-  bottom:11px;
-  left:-21px;
+.product-rating-count {
+  position: absolute;
+  bottom: 4px;
+  left: 110px;
+  margin-top: 20px;
+  color: black;
 }
 
-.product-rating-count{
-  position:absolute;
-  bottom:4px;
-  left:110px;
-  margin-top:20px;
-  color:antiquewhite;
-}
-
-.units-left{
-  color:red;
+.units-left {
+  color: red;
   margin-top: -12px;
-  margin-bottom:6px;
-  
+  margin-bottom: 6px;
 }
-.btns-container{
-  display:flex;
+.btns-container {
+  display: flex;
   position: relative;
   gap: 25px;
-  opacity:0;
+  opacity: 0;
 }
 
-.decrease-btn,.increase-btn{
-  padding-inline:15px;
-  padding-block:2px;
-  font-weight:700;
+.decrease-btn,
+.increase-btn {
+  padding-inline: 15px;
+  padding-block: 2px;
+  font-weight: 700;
   font-size: 17px;
   margin-bottom: 6px;
   border-radius: 6px;
-  background-color:rgb(236, 137, 7);
-  border:none;
-  box-shadow:0px 4px 0px 0px rgb(236,137,7);
+  background-color: rgb(236, 137, 7);
+  border: none;
+  box-shadow: 0px 4px 0px 0px rgb(236, 137, 7);
 }
-.decrease-btn:hover{
-  background-color: red; 
+.decrease-btn:hover {
+  background-color: red;
 }
 
-.increase-btn:hover{
+.increase-btn:hover {
   background-color: green;
   transform: scaleY(90%);
 }
 
-.update{
-  color:white;
+.update {
+  color: white;
   font-weight: 700;
 }
 
-.shop-chant{
-  margin-right:18px;
+.shop-chant {
+  margin-right: 18px;
   font-weight: 500;
-  font-size: 18px;
-  color:palevioletred;
-  font-style:oblique;
+  font-size: 15px;
+  color: red;
+  font-style: oblique;
 }
 
-.add-to-cart-btn{
-  background-color:rgb(236, 137, 7);
-  padding-inline:20px;
-  padding-block:8px;
-  margin-right:13px;
-  color:white;
-  border-radius:24px;
-  transition:0.5s;
-  border:none;
-  font-size:18px;
-  font-weight:500;
-  transition:background-color 0.5s
-}
-
-.add-to-cart-btn:hover{
-  background-color:yellow;
-  color:black;
-  border:2px solid rgb(236, 137, 7); 
+.add-to-cart-btn {
+  background-color: rgb(236, 137, 7);
+  padding-inline: 20px;
+  padding-block: 6px;
+  margin: 2px 13px 10px;
+  color: white;
+  border-radius: 20px;
+  border: none;
+  font-size: 16px;
+  font-weight: 500;
+  transition: background-color 0.5s;
 }
 
 /* Style rules for preloader*/
-#preloader{
-  background:#000 url();
-  position:fixed;
-  width:100%;
-  height:100vh;
+#preloader {
+  background: #000 url();
+  position: fixed;
+  width: 100%;
+  height: 100vh;
   z-index: 100;
-  top:0;
+  top: 0;
   justify-content: center;
 }
-em{
-  position:absolute;
-  top:15px;
-  left:15px;
-  background-color:rgb(236, 137, 7);
-  width:20px;
-  height:20px;
-  border-radius:50% ;
+em {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  background-color: rgb(236, 137, 7);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
 }
 
-#spinner{
-  width:70px;
-  height:70px;
-  position:absolute;
-  border:10px solid purple;
-  border-top:10px solid red;
-  border-radius:50%;
-  top:50%;
-  left:50%;
-  animation: spin 0.5s infinite linear
+#spinner {
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  border: 10px solid purple;
+  border-top: 10px solid red;
+  border-radius: 50%;
+  top: 50%;
+  left: 40%;
+  animation: spin 0.5s infinite linear;
 }
 
-@keyframes spin{
-  0%{
-    transform:rotate(0deg);
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
 
-  100%{
-    transform:rotate(360deg); 
+  100% {
+    transform: rotate(360deg);
   }
 }
 
 /* Style rules for footer*/
-.footer{
-  background-color:rgb(25,25,25); 
-  color:white; 
-  text-align:center;
-  padding-inline:20px;
-  line-height:30px;
+.footer {
+  background-color: rgb(25, 25, 25);
+  color: white;
+  text-align: center;
+  padding-inline: 20px;
+  line-height: 30px;
   padding-top: 10px;
 }
 
-.footer-grid{
-  display:grid;
-  grid-template-columns:repeat(2,1fr);
-  gap:30px; 
+.footer-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
 }
 
-span{
-  color:red;
-  font-size:20px ;
+span {
+  color: red;
+  font-size: 20px;
 }
 
-.foot-links a{
+.foot-links a {
   text-decoration: none;
-  color:white;
+  color: white;
+  font-size: 15px;
 }
-.copy-right{
- padding-bottom:5rem; 
+.copy-right {
+  padding-bottom: 5rem;
 }
