--- a/styles/checkout-header.css
+++ b/styles/checkout-header.css
@@ -1,61 +1,52 @@
 .header {
   position: fixed;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   left: 0;
   right: 0;
   background-color: white;
-  padding: 7px;
+  padding: 7px 10%;
+  height: 65px;
   top: 0;
   z-index: 999;
   box-shadow: 0 1px 2px rgb(186, 177, 177);
 }
-
-.header-left {
-  margin-left: 1.5rem;
-}
-
-@media (max-width: 768px) {
-  .cart-quantity {
-    font-size: 18px;
-    font-size: 500;
-  }
-}
-.u-shop-logo {
-  font-size: 23px;
-  font-weight: 600px;
-  text-decoration: none;
-  max-width: 100px;
-  color: rgb(236, 137, 7);
-  text-shadow: 0 4px 3px rgb(165, 97, 9);
-  flex: 1;
-}
-.user-icon {
-  background-color: rgb(220, 208, 208);
-  border-radius: 50%;
-  margin-right: 16px;
-  color: white;
-  align-items: stretch;
-  margin-top: 4px;
-}
-
 .header-right {
-  position: relative;
   display: flex;
-  margin-right: 60px;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  font-size: 23px;
+}
+
+.user-container {
+  background-color: rgb(224, 219, 219);
+  height: 33px;
+  width: 33px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
+.header-left a {
+  text-decoration: none;
+  color: rgb(236, 137, 7);
+  text-shadow: 0 4px 3px rgb(165, 97, 9);
+  cursor: pointer;
+}
 
-.cart-quantity {
-  color: white;
+.fa-cart-shopping {
+  position: relative;
+}
+
+#cart {
   position: absolute;
-  left: 70px;
-  top: -4px;
+  font-size: 16px;
+  top: -14px;
+  left: 10px;
+  color: white;
   background-color: rgb(236 137 7);
-  padding: 3px;
+  padding: 4px;
   border-radius: 50%;
-  font-weight: 600;
-  font-size: 23px;
 }
